# schwab-py

./: .pylintrc  .readthedocs.yaml  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python.yml
docs/: auth.rst  client.rst  conf.py  getting-started.rst  help.rst  index.rst  order-builder.rst  order-templates.rst  requirements.txt  streaming.rst  tda-transition.rst  util.rst
examples/: schwab-order-codegen.py
examples/streaming/: level_one_equity.py  level_one_options.py
schwab/: __init__.py  auth.py  debug.py  decoders.py  streaming.py  utils.py  version.py
schwab/client/: asynchronous.py  base.py  synchronous.py
schwab/contrib/: orders.py  util.py
schwab/orders/: __init__.py  builders.py  common.py  equities.py  generic.py  options.py
schwab/scripts/: orders_codegen.py  schwab-py_analysis.py  schwab_analysis.py  schwab_fetch_new_token.py  schwab_package_checker.py  schwab_refresh_token.py  schwab_setup_env.py
tests/: auth_async_test.py  auth_test.py  client_test.py  debug_test.py  orders_test.py  streaming_test.py  test.py  test_base_url.py  test_base_url_async.py  test_schwab_analysis.py  utils.py  utils_test.py
tests/contrib/: orders_test.py  util_test.py
tests/orders/: common_test.py  generic_test.py  options_test.py
tests/scripts/: orders_codegen_test.py
tests/testdata/: preferences.json
