[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[check-manifest]
ignore =
    tox.ini

[flake8]
exclude =
    virtualenv
max-line-length = 80
max-complexity = 10
per-file-ignores =
    __init__.py: F401
ignore = E203, E266, E501, W503, C901
select = B,C,E,F,W,T4,B9
inline-quotes = double
multiline-quotes = double
docstring-quotes = double
docstring-convention = google
import-order-style = google
application-import-names = schwab

[tool:brunette]
line-length = 79
verbose = true
single-quotes = false

[tool:pytest]
python_files = *test*.py
testpaths = tests
norecursedirs=schwab build dist docs htmlcov

[coverage:run]
branch = True

[coverage:report]
exclude_lines =
    pragma: no cover
    except ImportError
    def __repr__
    raise NotImplementedError
    raise DeprecationWarning
    deprecate
